--- a/Back/Back/pom.xml
+++ b/Back/Back/pom.xml
@@ -30,6 +30,11 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.24</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
