--- a/skeleton-starter-flow-spring-24/pom.xml
+++ b/skeleton-starter-flow-spring-24/pom.xml
@@ -55,6 +55,11 @@
             <version>2.10.1</version>
         </dependency>
         <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.1.15</version>
+        </dependency>
+        <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-spring-boot-starter</artifactId>
         </dependency>
